--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 }
 
 .banner {
-  width:100%;
-  height:100vh;
+  width: 100%;
+  height: 100vh;
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -14,67 +14,171 @@ body {
 
 .banner .slider {
   position: absolute;
-  width:200px;
-  height:250px;
+  width: 200px;
+  height: 250px;
   top: 35%;
-  left:calc(50% - 100px);
+  left: calc(50% - 100px);
   transform-style: preserve-3d;
   transform: perspective(1000px);
   animation: autorun 40s linear infinite;
 }
-@keyframes autorun{
-  from{
+
+@keyframes autorun {
+  from {
     transform: perspective(1000px) rotateX(-10deg) rotateY(0deg);
-  }to{
+  }
+  to {
     transform: perspective(1000px) rotateX(-10deg) rotateY(360deg);
   }
 }
 
-.banner .slider .item{
+.banner .slider .item {
   position: absolute;
   inset: 0 0 0 0;
-  transform: 
-  rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg))
-  translateZ(550px);
+  transform: rotateY(calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg))
+    translateZ(550px);
 }
 
-.banner .slider .item img{
-  width:100%;
-  height:100%;
+.banner .slider .item img {
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
-.banner .content{
+.banner .content {
   letter-spacing: 8px;
-  font-family: IM Fell DW Pica SC;
+  font-family: 'IM Fell DW Pica SC', serif;
   position: absolute;
   font-size: 2.59lvw;
   top: 2rem;
   line-height: 4em;
   color: transparent;
-  left:48rem;
+  left: 50%;
   transform: translateX(-50%);
   width: min(1400px, 100vw);
-  height:max-content;
+  height: max-content;
   padding-bottom: 100px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: center;  
+  align-items: center;
   -webkit-text-stroke: 1px yellow;
   z-index: -1;
 }
 
-.banner .author{
+.banner .author {
   position: absolute;
   max-width: 200%;
   bottom: 590px;
-  left:45em;
-  font-family: kanit;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: 'Kanit', sans-serif;
   -webkit-text-stroke: 2px yellow;
-  color:transparent;
+  color: transparent;
   font-size: 25px;
   letter-spacing: 10px;
-  
 }
+
+
+@media (max-width: 1200px) {
+  .banner .slider {
+    top: 30%;
+    width: 180px;
+    height: 230px;
+    left: calc(50% - 90px);
+  }
+  .banner .slider .item img {
+    width: 90%;
+    height: 90%;
+  }
+}
+
+@media (max-width: 992px) {
+  .banner .slider {
+    top: 25%;
+    width: 160px;
+    height: 210px;
+    left: calc(50% - 80px);
+  }
+  .banner .slider .item img {
+    width: 80%;
+    height: 80%;
+  }
+  .banner .content {
+    font-size: 2.5lvw;
+    line-height: 3em;
+    padding-bottom: 80px;
+  }
+  .banner .author {
+    bottom: 550px;
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 768px) {
+  .banner .slider {
+    top: 20%;
+    width: 140px;
+    height: 190px;
+    left: calc(50% - 70px);
+  }
+  .banner .slider .item img {
+    width: 70%;
+    height: 70%;
+  }
+  .banner .content {
+    font-size: 2.2lvw;
+    line-height: 2.5em;
+    padding-bottom: 60px;
+  }
+  .banner .author {
+    bottom: 500px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .banner .slider {
+    top: 15%;
+    width: 120px;
+    height: 170px;
+    left: calc(50% - 60px);
+  }
+  .banner .slider .item img {
+    width: 60%;
+    height: 60%;
+  }
+  .banner .content {
+    font-size: 2lvw;
+    line-height: 2em;
+    padding-bottom: 40px;
+  }
+  .banner .author {
+    bottom: 450px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 400px) {
+  .banner .slider {
+    top: 10%;
+    width: 100px;
+    height: 150px;
+    left: calc(50% - 50px);
+  }
+  .banner .slider .item img {
+    width: 50%;
+    height: 50%;
+  }
+  .banner .content {
+    font-size: 1.8lvw;
+    line-height: 1.5em;
+    padding-bottom: 20px;
+  }
+  .banner .author {
+    bottom: 400px;
+    font-size: 16px;
+  }
+}
+
 
